--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
+
           <li class="nav-item menu-open">
             <a href="index.html" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -218,31 +219,42 @@
               </p>
             </a>
 
-            <a href="page/manage-students.html" class="nav-link ">
+          <li class="nav-item">
+            <a href="#" class="nav-link ">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Manage
+                Manage Students
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link active">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Register Students</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./index2.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>View Students</p>
+                </a>
+              </li>
+
+            </ul>
+          </li>
 
 
             <a href="#" class="nav-link ">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Dashboard
+                Manage cources
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
 
 
-            <a href="#" class="nav-link ">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
+
 
           </li>
 
