--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
 
           <li class="nav-item menu-open">
             <a href="index.html" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class="nav-icon fas fa-home"></i>
               <p>
                 Dashboard
                 <i class="right fas fa-angle-left"></i>
