--- a/src/index.html
+++ b/src/index.html
@@ -1132,10 +1132,10 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-    All rights reserved.
+    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Lahiru Rajapakshe </a>.</strong>
+    All rights reserved. MiT License
     <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.2.0
+      <b>Version</b> 0.1.0
     </div>
   </footer>
 </div>
