Build project using parcel successfully

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,22 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="/node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="/node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="node_modules/admin-lte/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="/node_modules/admin-lte/dist/css/adminlte.min.css">
 
 
   <!-- REQUIRED SCRIPTS -->
   <!-- jQuery -->
-  <script defer src="node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
+  <script defer src="/node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap -->
-  <script defer src="node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="module" defer src="/node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- overlayScrollbars -->
-  <script defer src="node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script type="module" defer src="/node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
-  <script defer src="node_modules/admin-lte/dist/js/adminlte.js"></script>
+  <script type="module" defer src="/node_modules/admin-lte/dist/js/adminlte.js"></script>
 
 </head>
 <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
@@ -176,7 +176,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index.html" class="brand-link">
-      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="image/llogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">LMS</span>
     </a>
 
@@ -235,7 +235,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="./index.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>View Students</p>
                 </a>
@@ -246,7 +246,7 @@
 
 
             <a href="#" class="nav-link ">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class="nav-icon fas fa-book"></i>
               <p>
                 Manage cources
                 <i class="right fas fa-angle-left"></i>
@@ -1133,7 +1133,7 @@
   <!-- Main Footer -->
   <footer class="main-footer">
     <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Lahiru Rajapakshe </a>.</strong>
-    All rights reserved. MiT License
+    All rights reserved. MIT License
     <div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 0.1.0
     </div>
