--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
+                <a href="./index.html" class="nav-link ">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Register Students</p>
                 </a>
@@ -1132,8 +1132,8 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Lahiru Rajapakshe </a>.</strong>
-    All rights reserved. MIT License
+    <strong>Copyright &copy; 2022 <a href="https://adminlte.io">Lahiru Rajapakshe </a>.</strong>
+    All rights Reserved. MIT License
     <div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 0.1.0
     </div>
